--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ constantly==23.10.4
 cryptography==44.0.3
 daphne==4.1.2
 Django==5.2.1
+dotenv==0.9.9
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
@@ -15,6 +16,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
 pyOpenSSL==25.0.0
+python-dotenv==1.1.0
 service-identity==24.2.0
 sqlparse==0.5.3
 Twisted==24.11.0
